--- a/example.env
+++ b/example.env
@@ -1,7 +1,7 @@
 PHP_VERSION=php81
 DB_VERSION=mysql8
 
-# xDebug settings
+# Xdebug settings
 XDEBUG_LOCAL_IP=192.168.0.100
 XDEBUG_SERVER_NAME=Docker
 
@@ -22,4 +22,4 @@ MYSQL_DATABASE=docker
 MYSQL_USER=docker
 MYSQL_PASSWORD=docker
 
-MYSQL_ROOT_PASSWORD=tiger
+MYSQL_ROOT_PASSWORD=secret
