--- a/config/nginx/sites/example.conf
+++ b/config/nginx/sites/example.conf
@@ -1,5 +1,5 @@
 server {
-    listen 8080;
+    listen 80;
     client_max_body_size 20m;
     error_log /var/log/nginx/error.log;
     access_log  /var/log/nginx/access.log;
@@ -13,7 +13,7 @@ server {
 
     location ~ ^/index\.php(/|$) {
 
-        fastcgi_pass unix:/var/run/php/php8.1-fpm.sock;
+        fastcgi_pass php:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include /etc/nginx/fastcgi_params;
 
